
# The INCLUDE and LIB directories to build the '_hughml' extension.
# You may also set them using the options '-I' and '-L'.
[build_ext]

# List of directories to search for 'hughml.h' (separated by ':').
#include_dirs=/usr/local/include:../../include

# List of directories to search for 'libhughml.a' (separated by ':').
#library_dirs=/usr/local/lib:../../lib

# An alternative compiler to build the extension.
#compiler=mingw32

# Additional preprocessor definitions might be required.
#define=hughml_DECLARE_STATIC

# The following options are used to build Pyhughml Windows installer
# for Python 2.7 on my PC:
#include_dirs=../../../libhughml/tags/0.1.4/include
#library_dirs=../../../libhughml/tags/0.1.4/win32/vs2008/output/release/lib
#define=hughml_DECLARE_STATIC

[metadata]
license_file = LICENSE
